fix/style: dark mode and mobile docs nav issues

--- a/styles/docs.css
+++ b/styles/docs.css
@@ -46,7 +46,7 @@
 
 .docs nav {
   position: relative;
-  padding: 30px;
+  padding: 20px;
   width: 240px;
   flex-shrink: 0;
   border-right: 1px solid var(--color-border-muted);
@@ -97,14 +97,14 @@
   }
 
   .docs nav {
-    padding: 12px;
+    padding: 20px;
     width: 100%;
     transition: width 0.1s ease;
   }
 
   .docs nav.collapsed {
     width: 0;
-    background: white;
+    background: var(--color-bg-content);
     border: none;
   }
 
@@ -114,9 +114,9 @@
 
   .docs nav .menu-icon {
     position: absolute;
-    top: 12px;
+    top: 16px;
     left: auto;
-    right: 12px;
+    right: 16px;
     display: block;
     border: 0;
     width: 30px;
@@ -124,7 +124,7 @@
   }
 
   .docs nav.collapsed .menu-icon {
-    left: 12px;
+    left: 16px;
     right: auto;
   }
 
